Scale based on resolution, fix scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,42 +3,53 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    :root {
+        --foreground-rgb: 255, 255, 255;
+        --background-start-rgb: 0, 0, 0;
+        --background-end-rgb: 0, 0, 0;
+    }
+}
+
+html {
+    font-size: 2vh;
+}
+
+@media screen and (max-width: 1920px) {
+    html {
+        font-size: 1.5vh;
+    }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(to bottom,
+            transparent,
+            rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @keyframes breathe3d {
     0% {
         transform: rotate3d(0, 0, 0, 0) scale(1);
     }
+
     25% {
         transform: rotate3d(1, 5, 0, 1deg) scale(1.01) translate3d(1px, 6px, 0);
     }
+
     50% {
         transform: rotate3d(0, 0, 0, 0) scale(1);
     }
+
     75% {
         transform: rotate3d(1, 5, 0, -1deg) scale(1.01) translate3d(-1px, 3px, 0);
     }
+
     100% {
         transform: rotate3d(0, 0, 0, 0) scale(1);
     }
@@ -52,6 +63,7 @@ body {
         opacity: 0;
         padding: 0;
     }
+
     50% {
         width: 100%;
         height: 0;
@@ -59,6 +71,7 @@ body {
         opacity: 1;
         padding: 0 1rem;
     }
+
     100% {
         height: 100%;
         max-height: 100%;
@@ -72,9 +85,11 @@ body {
     0% {
         opacity: 0;
     }
+
     50% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
